# LeakShield

./: .gitignore  .leakshieldignore  LICENSE  README.md  leakshield.yml  pyproject.toml  requirements.txt
docs/: PRODUCT_SPEC.md  SYSTEM_ARCHITECTURE.md
hooks/: pre-commit.template
scripts/: audit-env.ps1
src/leakshield/: __init__.py  cli.py  models.py
src/leakshield/classification/: __init__.py  confidence.py  severity.py
src/leakshield/config/: __init__.py  defaults.py  loader.py  merger.py  schema.py
src/leakshield/detectors/: __init__.py  base.py  entropy.py  regex_detector.py  regex_patterns.py  registry.py
src/leakshield/discovery/: __init__.py  binary_guard.py  file_walker.py  gitignore_matcher.py  leakshield_ignore.py
src/leakshield/filtering/: __init__.py  allowlist.py  context_filter.py  placeholders.py
src/leakshield/git/: __init__.py  diff_hunks.py  hook_installer.py  staged_content.py  staged_files.py
src/leakshield/reporting/: cli_reporter.py  exit_policy.py  json_reporter.py  masking.py  schema.py
src/leakshield/services/: doctor_service.py  hook_service.py  pipeline.py  scan_service.py
tests/: conftest.py
tests/e2e/: test_end_to_end_cli.py
tests/fixtures/detectors/: samples.txt
tests/integration/cli/: test_doctor_cli.py  test_output_formats.py  test_scan_cli.py
tests/integration/config/: test_precedence.py
tests/integration/git/: test_install_hook.py  test_precommit_block.py  test_precommit_pass.py
tests/integration/scan/: test_full_scan.py  test_staged_scan.py
tests/unit/: test_models.py
(+12 files in other folders)
